style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Dancing+Script:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo:ital,wght@0,100..900;1,100..900&family=Dancing+Script:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo:ital,wght@0,100..900;1,100..900&family=Dancing+Script:wght@400..700&family=Kalnia:wght@100..700&family=PT+Sans+Narrow:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo:ital,wght@0,100..900;1,100..900&family=Dancing+Script:wght@400..700&family=Kalnia:wght@100..700&family=PT+Sans+Narrow:wght@400;700&family=Slabo+27px&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo:ital,wght@0,100..900;1,100..900&family=Dancing+Script:wght@400..700&family=Kalnia:wght@100..700&family=PT+Sans+Narrow:wght@400;700&family=Protest+Riot&family=Slabo+27px&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo:ital,wght@0,100..900;1,100..900&family=Barriecito&family=Dancing+Script:wght@400..700&family=Kalnia:wght@100..700&family=PT+Sans+Narrow:wght@400;700&family=Protest+Riot&family=Russo+One&family=Slabo+27px&display=swap');

body::-webkit-scrollbar {
    width: 10px; 
  }
 body::-webkit-scrollbar-track {
    background-color: rgb(181, 192, 208); 
    }
 body::-webkit-scrollbar-thumb {
    background-color:rgb(0, 129, 112);
    border-radius: 5px; 
  }
  body::-webkit-scrollbar-thumb:hover {
    background-color:rgb(0, 129, 112); 
  }

body{
    overflow-x: hidden;
    margin: 0px;
    padding: 0px;
    background-color: rgb(181, 192, 208);
}

.navbar{
    height: 12vh;
    width: 100vw;
    background-color: rgb(0, 129, 112);
}

.navbar img{
    width: 70px;
    padding: 10px 0px;
    margin-left: 18px;
}

.navbar{
    display: flex;
    align-items: center;  
    justify-content: space-between;
}

.flex{
    display: flex;
    align-items: center;  
    justify-content: center;
}
.handles{
    padding-right: 30px;
}
.handles img{
    width: 27px;
    height: 27px;
    padding: 5px;
    border-radius: 50%;
}
.handles img:hover{
    background-color: rgb(42, 15, 62);
    filter: invert(1); 
}

.name{
    font-family: "Dancing Script", cursive;
    font-weight:900;
    font-size: 20px;
    color: rgb(213, 240, 193);
}

.tagline{
    font-family: "Archivo", sans-serif;
    letter-spacing: 8px;
    font-weight: bold;
    color: rgb(3, 6, 55);
}

.text1{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 78vw;
    background-color: rgb(170, 217, 187);
    border-radius: 20px;
    padding: 18px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
}

.content1{
    font-family: "Slabo 27px", serif;
    font-size: 18px;
    font-weight: 400;
}

.heading1{
    margin-bottom: 12px;
    font-family: "Anton", sans-serif;
    letter-spacing: 1px;
    color: rgb(3, 6, 55);
    font-size: 23px;
}
.center{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 0px;
}

.knowus{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 78vw;
    padding: 20px;
    background-color: rgb(249, 247, 201, 0.7);
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
}

.content2{
    font-family: "Slabo 27px", serif;
    display: flex;
    gap: 4px;
    font-weight: 600;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: rgb(24, 61, 61);
}

.clr{
    color: rgb(117, 14, 33);
    padding-right: 5px;
    font-size: 19px;
}

.heading2{
    margin-bottom: 12px;
    font-family: "Protest Riot", sans-serif;
    font-size: 23px;
    color: rgb(24, 61, 61);
    
}

.end{
    margin-top: 12px;
}

.ku{
    font-family: "Kalnia", serif;
    font-weight: bold; 
    letter-spacing: 1px;
    font-size: 27px;
    color: rgb(3, 6, 55);
}

.ingredients{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 78vw;
    padding: 20px;
    background-color: rgb(249, 247, 201, 0.7);
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
}
.heading3{
    margin-bottom: 12px;
    font-family: "Protest Riot", sans-serif;
    font-size: 23px;
    color: rgb(24, 61, 61);
}
.subheading3{
    color: rgb(117, 14, 33);
    font-family: "Slabo 27px", serif;
    font-weight: bold; 
    font-size: larger;
}

.content3 li{
    font-family: "Russo One", sans-serif;
    color: rgb(83, 92, 145);
}

.btn {
  background-color: #c2fbd7;
  border-radius: 100px;
  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
  color: green;
  cursor: pointer;
  display: inline-block;
  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
  padding: 7px 20px;
  text-align: center;
  text-decoration: none;
  transition: all 250ms;
  border: 0;
  font-size: 18px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  font-weight: bold;
}

.btn:hover {
  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
  transform: scale(1.05) rotate(-1deg);
}


.variant{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50vw;
    padding: 10px;
    background-color: rgb(249, 247, 201, 0.7);
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
    margin-bottom: 15px;
    color: rgb(22, 53, 53);
    transition: all 0.4s ease;
}

select {
    padding: 8px; /* Adjust the padding as needed */
    font-size: 16px; 
    border-radius: 18px;
    background-color: rgb(170, 217, 187); 
    color:rgb(24, 61, 61); 
  }

  /* Style the options inside the select dropdown */
select option {
    background-color: rgb(24, 61, 61); 
    color: rgb(170, 217, 187); 
  }

  /* Style the select dropdown when it's focused */
select:focus {
    outline: none; 
    border-color: rgb(170, 217, 187);
    box-shadow: 0 0 5px rgb(170, 217, 187); 
  }

.hv{
    font-family: "Protest Riot", sans-serif;
    font-size: 25px;
    margin-bottom: 15px;
  }

.hs{
    font-family: "Protest Riot", sans-serif;
    font-size: 20px;
    margin-bottom: 15px;
}

.satisfaction{
    color: rgb(22, 53, 53);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50vw;
    padding: 10px;
    background-color: rgb(249, 247, 201, 0.7);
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
    margin-bottom: 15px;
    transition: all 0.4s ease;
}

.qs{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.hp , .hf{
    font-family: "Protest Riot", sans-serif;
    font-size: 20px;
    margin-bottom: 15px;
}

.performance, .fragnance, .feel, .wiping, .size, .test, .improve, .contact{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50vw;
    padding: 10px;
    background-color: rgb(249, 247, 201, 0.7);
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
    margin-bottom: 15px;
    color: rgb(22, 53, 53);
    transition: all 0.4s ease;
}

.performance:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.fragnance:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.variant:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.size:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.wiping:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.feel:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.satisfaction:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.test:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}
.improve:hover{
    width: 70vw;
    color: rgb(249, 247, 201, 0.7);
    background-color: rgb(22, 53, 53);
    padding: 20px;
}

 /* Style for the input field */
 input[type="text"] {
    padding: 10px;
    border: 1px solid rgb(170, 217, 187);
    border-radius: 5px;
    font-size: 16px;
    width: 35vw;
    box-sizing: border-box; /* Ensure padding and border are included in the width */
}
input {
    width: 200px;
    height: 30px;
    word-wrap: break-word; 
    transition: width 0.3s, height 0.3s; /* Add smooth transition effect */
  }
  
/* Increase size on hover */
.expand:hover {
    width: 600px;
    height: 40px;
}

.cu{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

/* Form container */
.container {
    max-width: 400px;
    margin: 0 auto;
    padding: 20px;
    border: 2px solid rgb(22, 53, 53);
    border-radius: 5px;
  }
  
  /* Form input fields */
  .container input[type="text"] {
    width: 100%;
    padding: 8px;
    margin-bottom: 10px;
    border: 1px solid rgb(22, 53, 53);
    border-radius: 5px;
  }
  
  /* Form labels */
  .container label {
    margin-bottom: 5px;
    display: block;
    font-weight: bold;
    color: rgb(22, 53, 53);
  }

  .btn2{
    background-color: #c2fbd7;
    border-radius: 100px;
    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
    color: green;
    cursor: pointer;
    display: inline-block;
    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
    padding: 7px 40px;
    text-align: center;
    text-decoration: none;
    transition: all 250ms;
    border: 0;
    font-size: 23px;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    font-weight: bold;
  }
  
  .btn2:hover {
    box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
    transform: scale(1.05) rotate(-1deg);
  }

@media screen and (max-width:1300px){
    .navbar{
        height: 45px;
    }
    .navbar img{
        width: 33px;
        margin-left: 10px;
    }
    .name{
        font-size: 9px;
    }
    .tagline{
        font-size: 10px;
        letter-spacing: 0;
    }
    .handles img{
        width: 15px;
        height: 15px;
        padding: 0;
        margin: 0;
    }
    .handles{
        padding: 0;
        margin: 0px 12px;
    }
    .expand{
        width: 10px;
    }
    .cu img{
        width: 0;
        opacity: 0;
    }
}

